fixed up a few things - changed key down functions to shift or ctl +

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
 .kit-detail {
     display: flex;
     flex-direction: row;
-    min-height: 30em;
+    min-height: 7%;
 }
 
 .kit-waveform-container{
@@ -77,14 +77,17 @@
     margin-right: 1em;
     margin-top: -4em;
     background: whitesmoke;
+    height: 10%;
     width: 60%;
     text-align: center;
     background: rgb(226, 226, 226);
 }
 
+
 .kit-detail-image-container img {
     margin: 3em;
-    margin-top: 6em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     max-height: 20em;
 }
 /* Discovery Page */
